Fixed CSS error on Firefox

--- a/www/css/carson.css
+++ b/www/css/carson.css
@@ -20,8 +20,8 @@ body {
 #projects {
 	float: left;
 	list-style-type: none;
-	margin: none;
-	padding: none;
+	margin: 0;
+	padding: 0;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
 	-webkit-margin-start: 0;
